# Accelerator-AI-agent-demos

./: .gitleaks  CONTRIBUTING.md  README.md  _clean.sh  mssql-mcp.env  orcl-mcp.env  proxy_full_chain.pem  psql-mcp.env
0-setup/: 0-setup.sh  1-start-local-db.sh  1-start-psql-db.sh  _install-docker.sh  _stop-db.sh  db_create_petclinic.sql  db_create_user.sql  db_load_petclinic.mssql  db_load_petclinic.plsql  start-psql-db.sh
1-mcp-server/: 0-run-server.sh  1-start-mcp-inspector.sh  _stop-inpsector.sh  _stop-inspector.sh  _stop-server.sh  mcp-psql.py  pyproject.toml
1-mcp-server/mssql/: mcp-mssql.py
1-mcp-server/orcl/: mcp-orcl.py
1-mcp-server/psql/: mcp-psql.py
2-self-hosted/: 0-setup.sh  1-run-mcphost-ollama.sh  mcphost-mcp-psql.json
3-claude-desktop/: 0-config-mcp-ext-for-claude-desktop.sh  _run-server.sh  mcp-psql.py  pyproject.toml
3-claude-desktop/psql-dxt/: manifest.json  manifest.json.template
4-claude-code/: 0-setup.sh  1-start-claude-code.sh
4-claude-code/.claude/: settings.local.json
5-langgraph/: 0-run-agent.sh  lg-psql.py  pyproject.toml
