[tool.poetry]
name = "mcp-server"
version = "0.1.0"
description = "MCP server for testing"
authors = ["Jody Hunt <jody.hunt@cyberark.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<4.0"
psycopg2-binary = "^2.9.10"
fastmcp = "^2.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
