[tool.poetry]
name = "langgraph-demo"
version = "0.1.0"
description = ""
authors = ["Jody Hunt <jody.hunt@cyberark.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langgraph = "^0.6.4"
psycopg2-binary = "^2.9.10"
langchain-tavily = "^0.2.11"
langchain-community = "^0.3.27"
langchain-openai = "^0.3.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
